# vfd-cbd

./: CITATION.cff  README.md  pyproject.toml
configs/: coil_basic.yaml  default.yaml  killer_final.yaml  killer_island.yaml  killer_tuning.yaml  killer_v2.yaml  killer_v3.yaml  killer_v4.yaml
scripts/: make_plots.py  run_sweep.py  run_sweep_gpu.py
src/vfd_cbd/: __init__.py  cli.py  config.py  coupling.py  dynamics.py  geometry.py  gpu_sweep.py  io.py  metrics.py  modes.py  plots.py  sweep.py
src/vfd_cbd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli_smoke.py  test_metrics.py  test_reproducibility.py
